# yoctotta-object-store

./: .gitignore  Cargo.toml  README.md  orion.toml
crates/orion-core/: Cargo.toml
crates/orion-core/src/: error.rs  extension.rs  lib.rs  meta.rs  storage.rs  stream.rs  tests.rs  types.rs
crates/orion-ext-auth/: Cargo.toml
crates/orion-ext-auth/src/: lib.rs
crates/orion-ext-rag/: Cargo.toml
crates/orion-ext-rag/src/: embedder.rs  extension.rs  lib.rs  search.rs  store.rs
crates/orion-ext-rag/tests/: rag_tests.rs
crates/orion-ext-trigger/: Cargo.toml
crates/orion-ext-trigger/src/: extension.rs  lib.rs  types.rs
crates/orion-ext-trigger/tests/: trigger_tests.rs
crates/orion-meta-postgres/: Cargo.toml
crates/orion-meta-postgres/src/: lib.rs  migrations.rs  store.rs
crates/orion-meta-raft/: Cargo.toml
crates/orion-meta-raft/src/: lib.rs  log_store.rs  network.rs  state_machine.rs  store.rs  types.rs
crates/orion-meta-sqlite/: Cargo.toml
crates/orion-meta-sqlite/src/: lib.rs
crates/orion-meta-sqlite/tests/: sqlite_tests.rs
crates/orion-proto-s3/: Cargo.toml
crates/orion-proto-s3/src/: error_response.rs  handler.rs  lib.rs  management.rs  metrics.rs  parser.rs  server.rs  ui.html  xml.rs
crates/orion-proto-s3/tests/: parser_tests.rs  xml_tests.rs
crates/orion-server/: Cargo.toml
crates/orion-server/src/: config.rs  main.rs
crates/orion-server/tests/: e2e_tests.rs  integration_tests.rs
crates/orion-store-fs/: Cargo.toml
crates/orion-store-fs/src/: lib.rs  store.rs
crates/orion-store-fs/tests/: fs_tests.rs
