[package]
name = "orion-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core traits and types for Yoctotta Object Store"

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
chrono.workspace = true
tokio-stream.workspace = true
futures.workspace = true
uuid.workspace = true
tracing.workspace = true
toml.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
