[package]
name = "orion-ext-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Simple username/password authentication extension for Yoctotta Object Store"

[dependencies]
orion-core.workspace = true
async-trait.workspace = true
serde.workspace = true
sha2.workspace = true
hex.workspace = true
rand.workspace = true
tokio.workspace = true
tracing.workspace = true
toml.workspace = true
