[package]
name = "orion-ext-rag"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "RAG (vector search) extension for Yoctotta - indexes stored objects for semantic search"

[dependencies]
orion-core.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
fastembed.workspace = true
rusqlite.workspace = true
usearch.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
