[package]
name = "orion-ext-trigger"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Webhook trigger extension for Yoctotta - fires HTTP callbacks on storage events"

[dependencies]
orion-core.workspace = true
async-trait.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
toml.workspace = true
chrono.workspace = true
uuid.workspace = true
futures.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
toml.workspace = true
