[package]
name = "orion-proto-s3"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "S3-compatible HTTP protocol layer for Yoctotta Object Store"

[dependencies]
orion-core.workspace = true
orion-ext-auth.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http.workspace = true
http-body-util.workspace = true
tokio.workspace = true
bytes.workspace = true
chrono.workspace = true
percent-encoding.workspace = true
quick-xml.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
base64.workspace = true
tracing.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
