[package]
name = "orion-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Yoctotta Object Store - S3-compatible distributed object storage"

[[bin]]
name = "orion"
path = "src/main.rs"

[features]
default = ["meta-sqlite", "rag", "trigger"]
meta-sqlite = ["dep:orion-meta-sqlite"]
meta-postgres = ["dep:orion-meta-postgres"]
meta-raft = ["dep:orion-meta-raft", "dep:orion-meta-sqlite"]
rag = ["dep:orion-ext-rag"]
trigger = ["dep:orion-ext-trigger"]

[dependencies]
orion-core.workspace = true
orion-store-fs.workspace = true
orion-meta-sqlite = { workspace = true, optional = true }
orion-meta-postgres = { workspace = true, optional = true }
orion-meta-raft = { workspace = true, optional = true }
orion-proto-s3.workspace = true
orion-ext-rag = { workspace = true, optional = true }
orion-ext-trigger = { workspace = true, optional = true }
orion-ext-auth.workspace = true

tokio.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
tempfile = "3"
bytes.workspace = true
